fix small screen devices overflowing issue

--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 /* ---------------- Global Base Styles ---------------- */
 body,
 .nav-item,
@@ -315,6 +321,7 @@ a:focus {
 @media (max-width: 599px) {
     .navbar ul {
         flex-direction: column;
+        align-items: stretch;
         /* stack links */
         width: 100%;
         padding: 0;
