--- a/css/style.css
+++ b/css/style.css
@@ -453,6 +453,7 @@ section {
         align-items: center;
         justify-content: flex-start;
         gap: 0;
+        overflow: hidden;
     }
 
     .navbar ul li {
